[project]
name = "neo4j-graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "langchain-neo4j>=0.3.0",
    "langchain-openai>=0.3.16",
    "python-dotenv>=1.1.0",
]
